@@ -15,6 +15,7 @@ package io.trino.client;
 
 import com.google.common.base.Joiner;
 import com.google.common.base.Splitter;
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Sets;
@@ -30,12 +31,12 @@ import okhttp3.RequestBody;
 
 import java.io.IOException;
 import java.io.InterruptedIOException;
-import java.io.UnsupportedEncodingException;
 import java.net.ProtocolException;
 import java.net.SocketTimeoutException;
 import java.net.URI;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.ZoneId;
 import java.util.List;
 import java.util.Map;
@@ -81,9 +82,10 @@ class StatementClientV1
     private final Call.Factory httpCallFactory;
     private final String query;
     private final AtomicReference<QueryResults> currentResults = new AtomicReference<>();
+    private final AtomicReference<ResultRows> currentRows = new AtomicReference<>();
     private final AtomicReference<String> setCatalog = new AtomicReference<>();
     private final AtomicReference<String> setSchema = new AtomicReference<>();
-    private final AtomicReference<String> setPath = new AtomicReference<>();
+    private final AtomicReference<List<String>> setPath = new AtomicReference<>();
     private final AtomicReference<String> setAuthorizationUser = new AtomicReference<>();
     private final AtomicBoolean resetAuthorizationUser = new AtomicBoolean();
     private final Map<String, String> setSessionProperties = new ConcurrentHashMap<>();
@@ -102,7 +104,10 @@ class StatementClientV1
 
     private final AtomicReference<State> state = new AtomicReference<>(State.RUNNING);
 
-    public StatementClientV1(Call.Factory httpCallFactory, ClientSession session, String query, Optional<Set<String>> clientCapabilities)
+    // Data accessor for raw and encoded data
+    private final ResultRowsDecoder resultRowsDecoder;
+
+    public StatementClientV1(Call.Factory httpCallFactory, Call.Factory segmentHttpCallFactory, ClientSession session, String query, Optional<Set<String>> clientCapabilities)
     {
         requireNonNull(httpCallFactory, "httpCallFactory is null");
         requireNonNull(session, "session is null");
@@ -112,11 +117,11 @@ class StatementClientV1
         this.timeZone = session.getTimeZone();
         this.query = query;
         this.requestTimeoutNanos = session.getClientRequestTimeout();
-        this.user = Stream.of(session.getAuthorizationUser(), session.getUser(), session.getPrincipal())
+        this.user = Stream.of(session.getAuthorizationUser(), session.getSessionUser(), session.getUser())
                 .filter(Optional::isPresent)
                 .map(Optional::get)
                 .findFirst();
-        this.originalUser = Stream.of(session.getUser(), session.getPrincipal())
+        this.originalUser = Stream.of(session.getSessionUser(), session.getUser())
                 .filter(Optional::isPresent)
                 .map(Optional::get)
                 .findFirst();
@@ -125,14 +130,15 @@ class StatementClientV1
                 .collect(toImmutableSet())));
         this.compressionDisabled = session.isCompressionDisabled();
 
-        Request request = buildQueryRequest(session, query);
+        this.resultRowsDecoder = new ResultRowsDecoder(new OkHttpSegmentLoader(requireNonNull(segmentHttpCallFactory, "segmentHttpCallFactory is null")));
 
+        Request request = buildQueryRequest(session, query, session.getEncoding());
         // Pass empty as materializedJsonSizeLimit to always materialize the first response
         // to avoid losing the response body if the initial response parsing fails
         executeRequest(request, "starting query", OptionalLong.empty(), this::isTransient);
     }
 
-    private Request buildQueryRequest(ClientSession session, String query)
+    private Request buildQueryRequest(ClientSession session, String query, Optional<String> requestedEncoding)
     {
         HttpUrl url = HttpUrl.get(session.getServer());
         if (url == null) {
@@ -157,8 +163,8 @@ class StatementClientV1
         }
         session.getCatalog().ifPresent(value -> builder.addHeader(TRINO_HEADERS.requestCatalog(), value));
         session.getSchema().ifPresent(value -> builder.addHeader(TRINO_HEADERS.requestSchema(), value));
-        if (session.getPath() != null) {
-            builder.addHeader(TRINO_HEADERS.requestPath(), session.getPath());
+        if (session.getPath() != null && !session.getPath().isEmpty()) {
+            builder.addHeader(TRINO_HEADERS.requestPath(), Joiner.on(",").join(session.getPath()));
         }
         builder.addHeader(TRINO_HEADERS.requestTimeZone(), session.getTimeZone().getId());
         if (session.getLocale() != null) {
@@ -193,6 +199,8 @@ class StatementClientV1
         builder.addHeader(TRINO_HEADERS.requestTransactionId(), session.getTransactionId() == null ? "NONE" : session.getTransactionId());
 
         builder.addHeader(TRINO_HEADERS.requestClientCapabilities(), clientCapabilities);
+
+        requestedEncoding.ifPresent(encoding -> builder.addHeader(TRINO_HEADERS.requestQueryDataEncoding(), encoding));
 
         return builder.build();
     }
@@ -246,10 +254,23 @@ class StatementClientV1
     }
 
     @Override
-    public QueryData currentData()
+    public ResultRows currentRows()
     {
         checkState(isRunning(), "current position is not valid (cursor past end)");
-        return currentResults.get();
+        return currentRows.get();
+    }
+
+    @Override
+    public QueryData currentData() // Raw over the wire representation
+    {
+        checkState(isRunning(), "current position is not valid (cursor past end)");
+        QueryResults queryResults = currentResults.get();
+
+        if (queryResults == null || queryResults.getData() == null) {
+            return null;
+        }
+
+        return queryResults.getData();
     }
 
     @Override
@@ -257,6 +278,12 @@ class StatementClientV1
     {
         checkState(!isRunning(), "current position is still valid");
         return currentResults.get();
+    }
+
+    @Override
+    public Optional<String> getEncoding()
+    {
+        return resultRowsDecoder.getEncoding();
     }
 
     @Override
@@ -272,7 +299,7 @@ class StatementClientV1
     }
 
     @Override
-    public Optional<String> getSetPath()
+    public Optional<List<String>> getSetPath()
     {
         return Optional.ofNullable(setPath.get());
     }
@@ -376,6 +403,7 @@ class StatementClientV1
             if (attempts > 0) {
                 Duration sinceStart = Duration.nanosSince(start);
                 if (sinceStart.compareTo(requestTimeoutNanos) > 0) {
+                    close();
                     state.compareAndSet(State.RUNNING, State.CLIENT_ERROR);
                     throw new RuntimeException(format("Error fetching next (attempts: %s, duration: %s)", attempts, sinceStart), cause);
                 }
@@ -436,8 +464,7 @@ class StatementClientV1
     {
         setCatalog.set(headers.get(TRINO_HEADERS.responseSetCatalog()));
         setSchema.set(headers.get(TRINO_HEADERS.responseSetSchema()));
-        setPath.set(headers.get(TRINO_HEADERS.responseSetPath()));
-
+        setPath.set(safeSplitToList(headers.get(TRINO_HEADERS.responseSetPath())));
         String setAuthorizationUser = headers.get(TRINO_HEADERS.responseSetAuthorizationUser());
         if (setAuthorizationUser != null) {
             this.setAuthorizationUser.set(setAuthorizationUser);
@@ -485,6 +512,15 @@ class StatementClientV1
         }
 
         currentResults.set(results);
+        currentRows.set(resultRowsDecoder.toRows(results));
+    }
+
+    private List<String> safeSplitToList(String value)
+    {
+        if (value == null || value.isEmpty()) {
+            return ImmutableList.of();
+        }
+        return Splitter.on(',').trimResults().splitToList(value);
     }
 
     private RuntimeException requestFailedException(String task, Request request, JsonResponse<QueryResults> response)
@@ -543,22 +579,12 @@ class StatementClientV1
 
     private static String urlEncode(String value)
     {
-        try {
-            return URLEncoder.encode(value, "UTF-8");
-        }
-        catch (UnsupportedEncodingException e) {
-            throw new AssertionError(e);
-        }
+        return URLEncoder.encode(value, StandardCharsets.UTF_8);
     }
 
     private static String urlDecode(String value)
     {
-        try {
-            return URLDecoder.decode(value, "UTF-8");
-        }
-        catch (UnsupportedEncodingException e) {
-            throw new AssertionError(e);
-        }
+        return URLDecoder.decode(value, StandardCharsets.UTF_8);
     }
 
     private enum State
